chore: skeleton init
* docs(openapi): added openapi doc

* docs(openapi): changed according to PR comments

* build: added initial skeleton

* build(deps): added prettier

* style: run prettier

* build: pr fixes
